--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,8 @@
 name: ci-golang-workflow
 on: [push]
 jobs:
-  check-application:
+  build-test-application:
+    name: Run tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2 # baixa o código do repo na máquina, faz o git checkout
@@ -10,3 +11,28 @@ jobs:
           go-version: 1.15
       - run: go test
       - run: go run math.go
+
+  build-and-push-docker-image:
+    name: Build and push docker image to dockerhub
+    needs: build-test-application
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: wesleywillians/fc2.0-ci-go:latest
