--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,4 +35,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: wesleywillians/fc2.0-ci-go:latest
+          tags: siluanaklein/continuous-integration:latest
